restructure high-level detector interface

--- a/psalg/psalg/CMakeLists.txt
+++ b/psalg/psalg/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(psalg SHARED
     src/PeakFinderAlgos.cpp
     src/stream.cc
     src/ArrayIO.cpp
+    src/hsd.cpp
 )
 
 target_include_directories(psalg PUBLIC
