Pull Array and BlockDgram out of ShapesData.hh

--- a/xtcdata/xtcdata/CMakeLists.txt
+++ b/xtcdata/xtcdata/CMakeLists.txt
@@ -45,6 +45,8 @@ install(FILES
     xtc/BldInfo.hh
     xtc/Level.hh
     xtc/ShapesData.hh
+    xtc/BlockDgram.hh
+    xtc/Array.hh
     xtc/XtcFileIterator.hh
     xtc/Damage.hh
     xtc/NamesIter.hh
