--- a/psalg/CMakeLists.txt
+++ b/psalg/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "6.0")
+    message(FATAL_ERROR "Insufficient gcc version")
+  endif()
+endif()
+
 add_compile_options(-Wall)
 add_compile_options(-Wno-uninitialized)
 add_compile_options(-fno-omit-frame-pointer)
