--- a/xtcdata/xtcdata/CMakeLists.txt
+++ b/xtcdata/xtcdata/CMakeLists.txt
@@ -4,4 +4,5 @@ add_subdirectory(app)
 install(EXPORT xtcdataTargets
     FILE xtcdataConfig.cmake
     DESTINATION lib/cmake/xtcdata
+    NAMESPACE xtcdata::
 )
