rename psalg files

--- a/psalg/psalg/CMakeLists.txt
+++ b/psalg/psalg/CMakeLists.txt
@@ -1,14 +1,16 @@
 add_subdirectory(utils)
 add_subdirectory(calib)
+add_subdirectory(alloc)
+add_subdirectory(peakFinder)
 
 install(FILES
-    LocalExtrema.hh
-    PeakFinderAlgos.hh
-    Types.hh
+#    LocalExtrema.hh
+#    PeakFinderAlgos.hh
+#    Types.hh
     stream.hh
     hsd.hh
-    AllocArray.hh
-    Allocator.hh
+#    AllocArray.hh
+#    Allocator.hh
     calib/ArrayIO.hh
     calib/ArrayMetadata.hh
 #    utils/Logger.hh
@@ -16,8 +18,8 @@ install(FILES
 )
 
 add_library(psalg SHARED
-    src/LocalExtrema.cc
-    src/PeakFinderAlgos.cc
+#    src/LocalExtrema.cc
+#    src/PeakFinderAlgos.cc
     src/stream.cc
     calib/src/ArrayIO.cc
 #    utils/src/Logger.cc
@@ -34,6 +36,7 @@ target_include_directories(psalg PUBLIC
 target_link_libraries(psalg
     utils
     calib
+    peakFinder
     rt
 )
 
