--- a/psalg/psalg/peaks/CMakeLists.txt
+++ b/psalg/psalg/peaks/CMakeLists.txt
@@ -1,14 +1,14 @@
-add_library(peakFinder SHARED
+add_library(peaks SHARED
     src/LocalExtrema.cc
     src/PeakFinderAlgos.cc
 )
 
-target_link_libraries(peakFinder
+target_link_libraries(peaks
     xtcdata::xtc
 )
 
 
-target_include_directories(peakFinder PUBLIC
+target_include_directories(peaks PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
 )
@@ -17,10 +17,10 @@ install(FILES
     LocalExtrema.hh
     PeakFinderAlgos.hh
     Types.hh
-    DESTINATION include/psalg/peakFinder
+    DESTINATION include/psalg/peaks
 )
 
-install(TARGETS peakFinder
+install(TARGETS peaks
     EXPORT psalgTargets
     ARCHIVE DESTINATION lib
     LIBRARY DESTINATION lib
