add C++ collection interface

--- a/psdaq/psdaq/service/CMakeLists.txt
+++ b/psdaq/psdaq/service/CMakeLists.txt
@@ -17,7 +17,21 @@ target_include_directories(service PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
 )
 
-install(TARGETS service
+add_library(collection SHARED
+    Collection.cc
+)
+
+target_link_libraries(collection
+    zmq
+)
+
+target_include_directories(collection PUBLIC
+     $ENV{CONDA_PREFIX}/include
+     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+     $<INSTALL_INTERFACE:include>
+)
+
+install(TARGETS service collection
     ARCHIVE DESTINATION lib
     LIBRARY DESTINATION lib
 )
