keep cleaning psalg/CMakeLists.txt add stuff for Detector

--- a/psalg/psalg/calib/CMakeLists.txt
+++ b/psalg/psalg/calib/CMakeLists.txt
@@ -15,6 +15,7 @@ target_include_directories(calib PUBLIC
 install(FILES
     ArrayIO.hh
     ArrayMetadata.hh
+    NDArray.hh
     DESTINATION include/psalg/calib
 )
 
