--- a/psalg/psalg/CMakeLists.txt
+++ b/psalg/psalg/CMakeLists.txt
@@ -1,19 +1,28 @@
+cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
+
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "6.0")
+    message(FATAL_ERROR "Insufficient gcc version")
+  endif()
+endif()
+
+#set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib;$ENV{CONDA_PREFIX}/lib")
+#set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
+#link_directories($ENV{CONDA_PREFIX}/lib)
+
 add_subdirectory(utils)
 add_subdirectory(calib)
 add_subdirectory(alloc)
 add_subdirectory(peaks)
 add_subdirectory(digitizer)
 
-install(FILES
-    calib/ArrayIO.hh
-    calib/ArrayMetadata.hh
-#    utils/Logger.hh
-    DESTINATION include/psalg
-)
-
 add_library(psalg SHARED
     calib/src/ArrayIO.cc
-#    utils/src/Logger.cc
+###   utils/src/Logger.cc
 )
 
 target_include_directories(psalg PUBLIC
