--- a/psdaq/psdaq/mmhw/CMakeLists.txt
+++ b/psdaq/psdaq/mmhw/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(mmhw SHARED
     AxiVersion.cc
     RingBuffer.cc
     GthEyeScan.cc
+    Xvc.cc
 )
 
 target_include_directories(mmhw PUBLIC
