--- a/psdaq/psdaq/pgp/pgpGen4Daq/kernel/Makefile
+++ b/psdaq/psdaq/pgp/pgpGen4Daq/kernel/Makefile
@@ -4,7 +4,7 @@ KVER := $(shell uname -r)
 ccflags-y := -I$(HOME)/../include/
 ccflags-y += -DDMA_IN_KERNEL=1
 
-obj-m := pgpGen4Daq.o pgpGen4Test.o
+obj-m := pgpGen4Daq.o pgpGen4Test.o pgpGen4SimCam.o
 
 all:
 	make  -C /lib/modules/$(KVER)/build M=$(HOME) CONFIG_DEBUG_INFO=YES modules
