--- a/psalg/psalg/calib/CMakeLists.txt
+++ b/psalg/psalg/calib/CMakeLists.txt
@@ -6,16 +6,15 @@ target_link_libraries(calib
     xtcdata::xtc
 )
 
-
 target_include_directories(calib PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
 )
 
 install(FILES
-    ArrayIO.hh
-    ArrayMetadata.hh
+    Types.hh
     NDArray.hh
+    ArrayIO.hh
     DESTINATION include/psalg/calib
 )
 
