--- a/psalg/psalg/CMakeLists.txt
+++ b/psalg/psalg/CMakeLists.txt
@@ -19,7 +19,7 @@ add_subdirectory(calib)
 add_subdirectory(alloc)
 add_subdirectory(peaks)
 add_subdirectory(digitizer)
-#add_subdirectory(detector)
+add_subdirectory(detector)
 
 add_library(psalg SHARED
     calib/src/ArrayIO.cc
@@ -38,15 +38,16 @@ target_link_libraries(psalg
     calib
     peaks
     digitizer
+    detector
     rt
 )
-    #detector
 
 # datareader - test of data reader from non-xtc files
 add_executable(datareader
     app/datareader.cc
 )
 target_link_libraries(datareader
+    detector
     psalg
     xtcdata::xtc
 )
