--- a/psdaq/psdaq/scripts/lab3-base.cnf
+++ b/psdaq/psdaq/scripts/lab3-base.cnf
@@ -33,10 +33,11 @@ procmgr_config = [
  { host: epics_host,  id:'xpmioc' ,port:'29452', flags:'s', env:epics_env, cmd:bin_path+'psdaq/xpm/xpmPVs -a '+ip_addr+'.102 -P DAQ:LAB2'},
  { host: epics_host,  id:'dticas' ,port:'29453', flags:'s', env:pcas_env, cmd:bins_path+'/launch_pcaspy '+bins_path+'/dticas.py -P DAQ:LAB2:DTI:'+shelf},
  { host: epics_host,  id:'dtiioc-103' ,port:'29455', flags:'s', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVs -a '+ip_addr+'.103 -P DAQ:LAB2:DTI:'+shelf+':3' },
-# { host: epics_host,  id:'dtiioc-104' ,port:'29454', flags:'s', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVs -a '+ip_addr+'.104 -P DAQ:LAB2:DTI:'+shelf+':4' },
-# { host: epics_host,  id:'dtiioc-105' ,port:'29456', flags:'s', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVs -a '+ip_addr+'.105 -P DAQ:LAB2:DTI:'+shelf+':5' },
-# { host: epics_host,  id:'dtiioc-106' ,port:'29457', flags:'s', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVs -a '+ip_addr+'.106 -P DAQ:LAB2:DTI:'+shelf+':6' },
+ { host: epics_host,  id:'dtiioc-104' ,port:'29454', flags:'s', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVs -a '+ip_addr+'.104 -P DAQ:LAB2:DTI:'+shelf+':4' },
+ { host: epics_host,  id:'dtiioc-105' ,port:'29456', flags:'s', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVs -a '+ip_addr+'.105 -P DAQ:LAB2:DTI:'+shelf+':5' },
+ { host: epics_host,  id:'dtiioc-106' ,port:'29457', flags:'s', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVs -a '+ip_addr+'.106 -P DAQ:LAB2:DTI:'+shelf+':6' },
  { host: epics_host,  id:'hsdcas-dev02' ,port:'29458', flags:'s', env:pcas_env, cmd:bins_path+'/launch_pcaspy '+bins_path+'/hsdcas.py -P DAQ:LAB2:HSD:DEV02'},
+ { host: epics_host,  id:'hsdcas-dev06' ,port:'29459', flags:'s', env:pcas_env, cmd:bins_path+'/launch_pcaspy '+bins_path+'/hsdcas.py -P DAQ:LAB2:HSD:DEV06'},
 
 ## procstat
  {                       id:'procstat',    flags:'s',  cmd:bins_path+'../procmgr/procstat.py -t '+username+' -e0 -n none -p '+platform+' p'+platform+'.cnf.last'},
