--- a/xtcdata/xtcdata/app/CMakeLists.txt
+++ b/xtcdata/xtcdata/app/CMakeLists.txt
@@ -8,8 +8,15 @@ target_link_libraries(xtcreader
 add_executable(xtcwriter
     xtcwriter.cc
 )
+
+find_package(PythonLibs 3.6 REQUIRED)
 target_link_libraries(xtcwriter
     xtc
+    ${PYTHON_LIBRARIES}
+)
+target_include_directories(xtcwriter PUBLIC
+    $ENV{CONDA_PREFIX}/include
+    ${PYTHON_INCLUDE_DIRS}
 )
 
 add_executable(xtcsave
