--- a/psdaq/psdaq/scripts/lab3-caf-cam.cnf
+++ b/psdaq/psdaq/scripts/lab3-caf-cam.cnf
@@ -1,5 +1,6 @@
 bin_path  = '/reg/neh/home/weaver/lcls2/psdaq/build/'
 bins_path = '/reg/neh/home/weaver/lcls2/psdaq/psdaq/scripts/'
+procstat_path = '/reg/neh/home/weaver/lcls2/psdaq/psdaq/procmgr/'
 
 platform = '1'
 username = 'lcls2'
@@ -56,6 +57,6 @@ procmgr_config = [
 # { host: 'daq-tst-dev01', id:'qRead-ds6' ,flags:qflags, cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/qRead -d /dev/pgpdaq0 -c 0 -L 0xf -P 8' },
 
 ## procstat
- {                       id:'procstat',    flags:'s',    env:'LD_LIBRARY_PATH=/reg/g/pcds/package/python-2.5.2/lib:/reg/g/pcds/package/qt-4.3.4_x86_64/lib PATH=/reg/g/pcds/package/python-2.5.2/bin:/reg/g/pcds/package/qt-4.3.4_x86_64/bin: PYTHONPATH=', cmd:'/reg/g/pcds/dist/pds/tools/procmgr/procstat.py -t '+username+' -e0 -n none -p '+platform+' p'+platform+'.cnf.last'},
+ {                       id:'procstat',    flags:'sp',   cmd:procstat_path+'procstat.py -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
   ]
 
