Move over to PVAccess.
This is an interim step in the migration to EPICS V7.
This migration step is a one-to-one migraion from CA to PVA.
That is, for each CA PV, we create a PVA PV.
In addition, some of the connected callback code is refactored.

The complete migration probably involves consolidating some of these
PV's into larger structures that can get get/set an a whole entity.

Also, includes changes from integration test

Add EPICS_PVA_ADDR_LIST to all cnf files.

--- a/psdaq/psdaq/cnf/lab3-murali.cnf
+++ b/psdaq/psdaq/cnf/lab3-murali.cnf
@@ -12,7 +12,7 @@ epics_host = 'daq-tst-dev02'
 os.environ['TESTRELDIR'] = '/reg/neh/home/cpo/git/lcls2/install'
 
 conda_env = getRelEnvString()
-epics_env = 'EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067 EPICS_CA_AUTO_ADDR_LIST=NO '+conda_env
+epics_env = 'EPICS_PVA_ADDR_LIST=10.0.3.255 EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067 EPICS_CA_AUTO_ADDR_LIST=NO '+conda_env
 pcas_env = 'EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067 EPICS_CAS_INTF_ADDR_LIST=10.0.0.2 '+conda_env
 shelf = '2'
 ip_addr = '10.0.'+shelf
