--- a/psdaq/psdaq/cnf/lab3-test.cnf
+++ b/psdaq/psdaq/cnf/lab3-test.cnf
@@ -1,13 +1,14 @@
 import os
 from psdaq.procmgr.ProcMgr import getRelEnvString
 
-platform = '0'
+platform = '2'
 username = 'lcls2'
 expname  = 'expname'
 expnum   = 'expnum'
 
+
 # can also set this environment in the shell.
-os.environ['TESTRELDIR'] = '/reg/neh/home/yoon82/Software/lcls2/install'
+os.environ['TESTRELDIR'] = '/reg/neh/home/mshankar/temp/lcls2/install'
 
 epics_env = 'EPICS_PVA_ADDR_LIST=10.0.3.255 EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067 EPICS_CA_AUTO_ADDR_LIST=NO'
 conda_env = getRelEnvString()
@@ -31,13 +32,13 @@ ip_addr = '10.0.'+shelf
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- { host: 'daq-tst-dev02', id:'hsdioc-dev02', flags:'sx', env:total_env, cmd:'hsdPVs -P DAQ:LAB2:HSD:DEV02 -I'},
  {                        id:'partca-'+platform ,flags:'s', env:total_env, cmd:'partca DAQ:LAB2:PART:'+platform},
  {                        id:'procstat', flags:'sp', env:conda_env, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
  {                        id:'modca'  ,flags:'s', env:total_env, cmd:'xpmca DAQ:LAB2:XPM:'+shelf},
  {                        id:'deadca-'+platform, flags:'s', env:total_env, cmd:'deadca DAQ:LAB2 '+platform+' '+shelf},
- {                        id:'dtica', flags:'s', env:total_env, cmd:'dtica DAQ:LAB2:DTI:'+shelf},
- {                        id:'hsdca', flags:'s', env:total_env, cmd:'hsdca DAQ:LAB2:HSD:DEV02'},
- { host: 'drp-tst-acc02', id:'EvtBuild', flags:'sxp', env:conda_env, cmd:'drpEbBuilder -1 8 -2 8' },
+# {                        id:'dtica', flags:'s', env:total_env, cmd:'dtica DAQ:LAB2:DTI:'+shelf},
+ { host: 'drp-tst-dev001', id:'teb1', flags:'sxp', env:total_env, cmd:'tstEbBuilder' },
+# { host: 'drp-tst-dev002', id:'drp1', flags:'sxp', env:total_env, cmd:'drp -o /tmp -l 0xf -D AreaDetector' },
+# { host: 'drp-tst-dev003', id:'drp2', flags:'sxp', env:total_env, cmd:'drp -o /tmp -l 0xf -D AreaDetector' },
  { host: 'drp-tst-acc06', id:'Collection', flags:'sxp', env:total_env, cmd:'collection -v' },
 ]
